# open62541-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nodes_blacklist.txt  partitions_example.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/ethernet_helper/: CMakeLists.txt  Kconfig.projbuild  connect.c
components/ethernet_helper/include/: ethernet_helper.h
components/open62541/: CMakeLists.txt  custom_getaddrinfo.c
main/: CMakeLists.txt  main.c
